// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Default 1`] = `
<div
  class="wrapper"
>
  <div
    class="centered"
  >
    <div
      class="wrapper"
    >
      <div
        class="centered"
      >
        <button
          class="button"
          style="color: rgb(68, 68, 68); border-color: #444;"
        >
          Please X!
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Card Default 1`] = `
<div>
  <div
    class="root"
  >
    <div
      class="card"
      style="transform: translate(50px, 300px);"
    >
      <ul
        class="list"
      >
        <li
          class="item"
        >
          
    とんこつラーメン
  
        </li>
        <li
          class="item"
        >
          
    油そば野菜油増し増しスペシャル
  
        </li>
        <li
          class="item"
        >
          
    うどん
  
        </li>
      </ul>
       
      <textarea
        class="input input"
        placeholder="Type something here..."
        style="resize: none; overflow: hidden; height: 16px;"
      />
    </div>
     
    <!---->
  </div>
  <div
    class="root"
  >
    <div
      class="card"
      style="transform: translate(600px, 400px);"
    >
      <h2
        class="headline"
      >
        ポメラニアン
      </h2>
       
      <textarea
        class="input input"
        placeholder="Type something here..."
        style="resize: none; overflow: hidden; height: 16px;"
      />
    </div>
     
    <!---->
  </div>
  <div
    class="root"
  >
    <div
      class="card"
      style="transform: translate(400px, 100px);"
    >
      <div
        class="text"
      >
        ようやくの思いで笹原を這い出すと向うに大きな池がある。吾輩は池の前に坐ってどうしたらよかろうと考えて見た。別にこれという 分別 （ ふんべつ ） も出ない。
      </div>
       
      <textarea
        class="input input"
        placeholder="Type something here..."
        style="resize: none; overflow: hidden; height: 16px;"
      />
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots Centered Default 1`] = `
<div
  class="wrapper"
>
  <div
    class="centered"
  >
    I’m centered
  </div>
</div>
`;

exports[`Storyshots Input Default 1`] = `
<div
  class="wrapper"
>
  <div
    class="centered"
  >
    <div
      class="wrapper"
    >
      <div
        class="centered"
      >
        <div
          style="width: 300px;"
        >
          <textarea
            class="input"
            placeholder="Type something here..."
            style="resize: none; overflow: hidden; height: 16px;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
